# OTUS_HOMEWORKS_02_2022

./: .gitignore  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  app.py  pyproject.toml
