[tool.poetry]
name = "homework_03"
version = "0.1.0"
description = ""
authors = ["Dmitriy F. <dim2872@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
httpx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
